feat: add a simple user registration process
